--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
       <div class="header">
         <div class="wrapper">
+          <a href="#" class="btnToggle">-</a>
           <nav class="navMain">
             <a class="active" href="#">HOMEPAGE</a>
             <a href="#">STYLE DEMO</a>
